Added pagination and refactored code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=freelancemp
 server.port=9192
-spring.datasource.url=jdbc:postgresql://localhost:5432/atp
+spring.datasource.url=jdbc:postgresql://localhost:5432/fmp
 spring.datasource.username=postgres
 spring.datasource.password=vinay123$
 spring.datasource.driver-class-name=org.postgresql.Driver
